# wynnBot

./: LICENSE  keep_alive.py  main.py  pyproject.toml  restart.py
botcore/: auth_check.py  descrip.py  mainDB.py  url_check.py
cmds/: active_system.py  engin.py  其他.py
ex_file/: driver_ex.py
